# hello_rust_diesel

./: .gitignore  Cargo.toml  sample.db
migrations/2021-09-22-163555_create_posts/: up.sql
src/: dao.rs  main.rs  models.rs  repositories.rs
